--- a/package.json
+++ b/package.json
@@ -1,16 +1,24 @@
 {
     "devDependencies": {
-        "@babel/core": "^7.17.0",
-        "@babel/preset-env": "^7.16.0",
         "@hotwired/stimulus": "^3.0.0",
         "@hotwired/turbo": "^7.1.1 || ^8.0",
         "@symfony/stimulus-bridge": "^3.2.0 || ^4.0.0",
         "@symfony/ux-turbo": "file:vendor/symfony/ux-turbo/assets",
         "@symfony/webpack-encore": "^5.0.0",
         "core-js": "^3.38.0",
-        "regenerator-runtime": "^0.13.9",
-        "webpack": "^5.74.0",
-        "webpack-cli": "^5.1.0"
+        "@babel/core": "^7.24.4",
+        "@babel/preset-env": "^7.24.4",
+        "autoprefixer": "^10.4.19",
+        "postcss": "^8.4.38",
+        "postcss-import": "^16.1.0",
+        "postcss-loader": "^7.3.4",
+        "regenerator-runtime": "^0.14.1",
+        "sass": "^1.75.0",
+        "sass-loader": "^14.2.1",
+        "tailwindcss": "^3.4.3",
+        "webpack": "^5.91.0",
+        "webpack-cli": "^5.1.4",
+        "webpack-notifier": "^1.15.0"
     },
     "license": "UNLICENSED",
     "private": true,
@@ -21,10 +29,9 @@
         "build": "encore production --progress"
     },
     "dependencies": {
-        "@tailwindcss/postcss": "^4.1.4",
+        "tailwindcss": "^3.4.3",
         "lucide": "^0.488.0",
         "postcss": "^8.5.3",
-        "postcss-loader": "^8.1.1",
-        "tailwindcss": "^4.1.4"
+        "postcss-loader": "^8.1.1"
     }
 }
